Add Barnsley Fern

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
       <button id="infiniteCorridor">Infinite Corridor</button>
       <button id="sierpinskiTriangle">Sierpinski Triangle</button>
       <button id="binaryTree">Binary Tree</button>
+      <button id="barnsleyFern">Barnsley Fern</button>
     </div>
     <h2 id="header"></h2>
-    <div id="levels">
+    <div id="levelsControlContainer">
       <div id="buttonRow">
         <button id="addLevel">Add Level</button>
         <h3 id="level"></h3>
@@ -42,6 +43,10 @@
         </div>
       </div>
     </div>
+    <div id="fernControlContainer">
+      <button id="playButton">Play</button>
+    </div>
+    <div></div>
     <div>
       <canvas
         id="fractal"
